<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main_scroll_view"

    tools:context="sk.libco.bestiaryfive.ui.MainActivityFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewName"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textColor="@color/textBigRed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:id="@+id/textViewType" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/textBigRed"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/armor_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLabelAC"
                    android:layout_weight="1"
                    android:textStyle="normal|bold"
                    android:paddingRight="4dp"
                    android:textColor="@color/textBigRed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewAC"
                    android:layout_weight="1"
                    android:textColor="@color/textBigRed" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/hit_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLabelHP"
                    android:textStyle="normal|bold"
                    android:paddingRight="4dp"
                    android:textColor="@color/textBigRed" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewHP"
                    android:textColor="@color/textBigRed" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLabelSpeed"
                    android:textStyle="normal|bold"
                    android:paddingRight="4dp"
                    android:textColor="@color/textBigRed" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewSpeed"
                    android:textColor="@color/textBigRed" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/textBigRed"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/str"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewLabelSTR"
                        android:textStyle="normal|bold"
                        android:paddingRight="4dp"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewSTR"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:text="@string/dex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewLabelDEX"
                        android:textStyle="normal|bold"
                        android:paddingRight="4dp"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewDEX"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:text="@string/con"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewLabelCON"
                        android:textStyle="normal|bold"
                        android:paddingRight="4dp"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewCON"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:text="@string/inteligence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewLabelINT"
                        android:textStyle="normal|bold"
                        android:paddingRight="4dp"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewINT"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:text="@string/wis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewLabelWIS"
                        android:textStyle="normal|bold"
                        android:paddingRight="4dp"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewWIS"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:text="@string/cha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewLabelCHA"
                        android:textStyle="normal|bold"
                        android:paddingRight="4dp"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewCHA"
                        android:textColor="@color/textBigRed"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/textBigRed"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFeatures"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/textBigRed"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFeats"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLabelActions"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@color/textBigRed"
                android:paddingTop="8dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/textBigRed"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewActions"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>


            <LinearLayout
                android:id="@+id/linearViewLegendary"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/legendary_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLabelLegendaryActions"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textColor="@color/textBigRed"
                    android:paddingTop="8dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/textBigRed"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewLegendaryActions"
                    android:scrollbars="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearViewReactions"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/reactions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLabelReactions"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textColor="@color/textBigRed"
                    android:paddingTop="8dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/textBigRed"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewReactions"
                    android:scrollbars="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearViewDescription"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLabelDescription"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textColor="@color/textBigRed"
                    android:paddingTop="8dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/textBigRed"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewDescription"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>